# ACE_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  api.py  database.py  docker-compose.yml  init-db.sh  main.py  models.py  package-lock.json  pyproject.toml  schemas.py  temporal_activities.py  temporal_workflows.py  worker.py
.claude-plugin/: marketplace.json
client/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
client/src/: App.tsx
client/src/api/: client.ts
client/src/pages/: PlaybookDetail.tsx  Playbooks.tsx  Playground.tsx
plugins/ace_service/: plugin.json
plugins/ace_service/commands/: ace.md
plugins/ace_service/skills/: ace.md
prompts/: curator.j2
server/: .dockerignore  Dockerfile  main.py  pyproject.toml  worker.py
server/app/: __init__.py  api.py  schemas.py
server/app/database/: __init__.py  database.py  models.py
server/app/prompts/: generator.j2  reflector.j2
server/app/temporal/: __init__.py  activities.py  workflows.py
